Resolve responsive design misalignments

--- a/client/src/app/nba/analysis/analysis.component.css
+++ b/client/src/app/nba/analysis/analysis.component.css
@@ -95,11 +95,20 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-items: center;
+    align-items: stretch;
     gap: 10px;
     background-color: var(--color-white);
     border-top: 2px solid var(--color-background);
-    height: fit-content;
+    position: relative;
+    min-height: 50px;
+}
+
+.ans div:nth-child(2) p {
+    align-self: center;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 1;
 }
 
 .ans div:nth-child(1) {
